--- a/index.html
+++ b/index.html
@@ -49,9 +49,18 @@
               <button class="btn saveBtn col-md-1"><i class="fas fa-save></i></button>
 </div>
 
+<div id=" hour11" class="row time-block">
+                  <div class="col-md-1 hour">
+                    11:00am
+                  </div>
+                  <textarea class="col-md-10 description">
+</textarea>
+                  <button class="btn saveBtn col-md-1"><i class="fas fa-save></i></button>
+</div>
+
     <script src=" https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-                  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-                  <script src="script.js"></script>
+                      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+                      <script src="script.js"></script>
 </body>
 
 </html>
