added all the hours

--- a/index.html
+++ b/index.html
@@ -58,9 +58,64 @@
                   <button class="btn saveBtn col-md-1"><i class="fas fa-save></i></button>
 </div>
 
+<div id=" hour12" class="row time-block">
+                      <div class="col-md-1 hour">
+                        12:00pm
+                      </div>
+                      <textarea class="col-md-10 description">
+</textarea>
+                      <button class="btn saveBtn col-md-1"><i class="fas fa-save></i></button>
+</div>
+
+<div id=" hour13" class="row time-block">
+                          <div class="col-md-1 hour">
+                            13:00pm
+                          </div>
+                          <textarea class="col-md-10 description">
+</textarea>
+                          <button class="btn saveBtn col-md-1"><i class="fas fa-save></i></button>
+</div>
+
+<div id=" hour14" class="row time-block">
+                              <div class="col-md-1 hour">
+                                14:00pm
+                              </div>
+                              <textarea class="col-md-10 description">
+</textarea>
+                              <button class="btn saveBtn col-md-1"><i class="fas fa-save></i></button>
+</div>
+
+<div id=" hour15" class="row time-block">
+                                  <div class="col-md-1 hour">
+                                    15:00pm
+                                  </div>
+                                  <textarea class="col-md-10 description">
+</textarea>
+                                  <button class="btn saveBtn col-md-1"><i class="fas fa-save></i></button>
+</div>
+
+<div id=" hour16" class="row time-block">
+                                      <div class="col-md-1 hour">
+                                        16:00pm
+                                      </div>
+                                      <textarea class="col-md-10 description">
+</textarea>
+                                      <button class="btn saveBtn col-md-1"><i class="fas fa-save></i></button>
+</div>
+
+<div id=" hour17" class="row time-block">
+                                          <div class="col-md-1 hour">
+                                            17:00pm
+                                          </div>
+                                          <textarea class="col-md-10 description">
+</textarea>
+                                          <button class="btn saveBtn col-md-1"><i class="fas fa-save></i></button>
+</div>
+
     <script src=" https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-                      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-                      <script src="script.js"></script>
+                                              <script
+                                                src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+                                              <script src="script.js"></script>
 </body>
 
 </html>
