--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <body>
   <header class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
-    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p class="lead">Hi, This Calendar App Will Help You Schedule Your Work Day. Enjoy It and Leave A Review!</p>
     <p id="currentDay" class="lead"></p>
   </header>
 
   <div class="container">
     <!-- Timeblocks go here -->
-    <div id="hour8" class="row time-block">
+    <div id="hour-8" class="row time-block">
       <div class="col-md-1 hour">
         8:00am
       </div>
@@ -31,7 +31,7 @@
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
 
-    <div id=" hour9" class="row time-block">
+    <div id="hour-9" class="row time-block">
       <div class="col-md-1 hour">
         9:00am
       </div>
@@ -40,7 +40,7 @@
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
 
-    <div id=" hour10" class="row time-block">
+    <div id="hour-10" class="row time-block">
       <div class="col-md-1 hour">
         10:00am
       </div>
@@ -49,7 +49,7 @@
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
 
-    <div id=" hour11" class="row time-block">
+    <div id="hour-11" class="row time-block">
       <div class="col-md-1 hour">
         11:00am
       </div>
@@ -58,7 +58,7 @@
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
 
-    <div id=" hour12" class="row time-block">
+    <div id="hour-12" class="row time-block">
       <div class="col-md-1 hour">
         12:00pm
       </div>
@@ -67,7 +67,7 @@
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
 
-    <div id=" hour13" class="row time-block">
+    <div id="hour-13" class="row time-block">
       <div class="col-md-1 hour">
         13:00pm
       </div>
@@ -76,7 +76,7 @@
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
 
-    <div id=" hour14" class="row time-block">
+    <div id="hour-14" class="row time-block">
       <div class="col-md-1 hour">
         14:00pm
       </div>
@@ -85,7 +85,7 @@
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
 
-    <div id=" hour15" class="row time-block">
+    <div id="hour-15" class="row time-block">
       <div class="col-md-1 hour">
         15:00pm
       </div>
@@ -94,7 +94,7 @@
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
 
-    <div id=" hour16" class="row time-block">
+    <div id="hour-16" class="row time-block">
       <div class="col-md-1 hour">
         16:00pm
       </div>
@@ -103,7 +103,7 @@
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
 
-    <div id=" hour17" class="row time-block">
+    <div id="hour-17" class="row time-block">
       <div class="col-md-1 hour">
         17:00pm
       </div>
